--- a/MvcApp/Views/Account/UsersInformation.cshtml
+++ b/MvcApp/Views/Account/UsersInformation.cshtml
@@ -27,11 +27,11 @@
                 <th>
                     Full name
                 </th>
-                <th ng-click="loginSort()">
-                    Login
+                <th>
+                    <a href="" style="color:black" ng-click="loginSort()">Login</a>
                 </th>
-                <th ng-click="isActiveSort()">
-                    IsActive
+                <th>
+                    <a href="" style="color:black" ng-click="isActiveSort()">IsActive</a>
                 </th>
                 <th>
                     Group
@@ -42,7 +42,7 @@
             </tr>
 
             <tr ng-repeat="user in users | startFrom:currentPage*pageSize | limitTo:pageSize">
-                <td align="center"><a href="" ng-click="edit(user.Login)"> Edit </a>| <a href="" ng-click=""> Delete </a></td>
+                <td align="center"><a href="" ng-click="edit(user.Login)"> Edit </a>| <a href="" ng-click="delete(user.Login)"> Delete </a></td>
                 <td>{{user.Name}} &nbsp; {{user.Surname}}</td>
                 <td>{{user.Login}}</td>
                 <td><input type="checkbox" ng-model="user.IsActive" ng-click="checkClick(user.Login,user.IsActive)"></td>
@@ -97,11 +97,21 @@
                             <div class="col-md-2 control-label">
                                 Group
                             </div>
-                            <input ng-model="user.Group" class="col-md-10 form-control inline" />
+
+                            <div class="dropdown btn-group">
+                                <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#">
+                                    {{userGroup}}
+                                    <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li ng-repeat="group in groups">
+                                        <a href="" ng-click="changeGroup(group.Group)">{{group.Group}}</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
 
                     </div>
-
 
                 </div>
 
@@ -129,6 +139,20 @@
                     </tr>
 
                 </table>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-primary" ng-click="ok()">Ok</button>
+                <button class="btn btn-warning" ng-click="cancel()">Close</button>
+            </div>
+        </script>
+
+        <script type="text/ng-template" id="deleteUserModal.html">
+            <div class="modal-header">
+                <h3 class="modal-title">
+                    Are you sure you want to delete user
+                    <br />
+                    <b>{{fullName}}</b>?
+                </h3>
             </div>
             <div class="modal-footer">
                 <button class="btn btn-primary" ng-click="ok()">Ok</button>
