--- a/MvcApp/Views/CatalogView/Index.cshtml
+++ b/MvcApp/Views/CatalogView/Index.cshtml
@@ -20,47 +20,47 @@
             <div class="modal-body">
                 <h3>Enter Name:</h3>
                 <input type="text" ng-model="note.name" />
-                <h3>Choose avatar:</h3>
-                <input type="file" ng-model="note.avatar" />
-                <h3>Enter description:</h3>
-                <div text-angular-toolbar class="toolbar" name="toolbar"></div>
-                <div text-angular ta-target-toolbars="toolbar" ng-model="note.description"></div>
-                <tabset>
-                    <tab heading="Technical characteristics">
-                        Enter your characteristic:
-                        <input type="text" ng-model="myCharacteristicName" />
-                        <br />
-                        or select existing:
-                        <div class="btn-group" dropdown is-open="status.isopen">
-                            <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle>
-                                Select characteristic <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu">
-                                <li ng-repeat="characteristic in allCharacteristics.Characteristics">
-                                    <a href="#" ng-click="dropdown(characteristic.Name)">{{characteristic.Name}}</a>
-                                </li>
-                            </ul>
-                        </div>
-                        <br />
-                        Enter value of characteristic:
-                        <input type="text" ng-model="myCharacteristicValue" />
-                    </tab>
-                    <tab heading="Photo">
-                        Photo
-                    </tab>
-                    <tab heading="Video">
-                        Video
-                    </tab>
-                    <tab heading="Documents">
-                        Documents
-                    </tab>
-                </tabset>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-primary" ng-click="ok()">Ok</button>
-                <button class="btn btn-warning" ng-click="cancel()">Close</button>
-            </div>
-        </script>
+                <h3>Choose avatar:</h3>               
+                        <input type="file" ng-model="note.avatar" accept="image/*"  id="uploadAvatar" />
+                        <h3>Enter description:</h3>
+                        <div text-angular-toolbar class="toolbar" name="toolbar"></div>
+                        <div text-angular ta-target-toolbars="toolbar" ng-model="note.description"></div>
+                        <tabset>
+                            <tab heading="Technical characteristics">
+                                Enter your characteristic:
+                                <input type="text" ng-model="myCharacteristicName" />
+                                <br />
+                                or select existing:
+                                <div class="btn-group" dropdown is-open="status.isopen">
+                                    <button type="button" class="btn btn-primary dropdown-toggle" dropdown-toggle>
+                                        Select characteristic <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu" role="menu">
+                                        <li ng-repeat="characteristic in allCharacteristics.Characteristics">
+                                            <a href="#" ng-click="dropdown(characteristic.Name)">{{characteristic.Name}}</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <br />
+                                Enter value of characteristic:
+                                <input type="text" ng-model="myCharacteristicValue" />
+                            </tab>
+                            <tab heading="Photo">
+                                Photo
+                            </tab>
+                            <tab heading="Video">
+                                Video
+                            </tab>
+                            <tab heading="Documents">
+                                Documents
+                            </tab>
+                        </tabset>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" ng-click="ok()">Ok</button>
+                        <button class="btn btn-warning" ng-click="cancel()">Close</button>
+                    </div>
+</script>
         <div id="record" hidden="hidden" ng-controller="recordCtrl">
             <img ng-src={{record.AvatarPath}} width="200" height="200" />
             <div id="nameModel">
@@ -195,7 +195,7 @@
                     <tab heading="Video">
                         <div ng-repeat="video in videos">
                             <div class="video-js-box">
-                                <video class="video-js" width="640" height="264" controls preload poster="">
+                                <video class="video-js" width="640" height="264"  poster="">
                                     <source src="{{video.path}}" type='video/mp4'>
                                 </video>
                                 <br />
