--- a/MvcApp/Views/Account/Register.cshtml
+++ b/MvcApp/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
     <h2>Create a new account</h2>
     <hr />
 
-    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal" }))
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal",enctype = "multipart/form-data" } ))
     {
         @Html.AntiForgeryToken()
 
@@ -58,7 +58,9 @@
                 @Html.ValidationMessageFor(model => model.Surname, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div>
+            <input type="file" accept="image/*"  name="file" id="userAvatar" />
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" class="btn btn-success" value="Register" />
