--- a/MvcApp/Views/Shared/_Layout.cshtml
+++ b/MvcApp/Views/Shared/_Layout.cshtml
@@ -6,7 +6,6 @@
     <title>@ViewBag.Title</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Scripts/myCSS/treeview.css" rel="stylesheet" />
     <link href="~/Content/dashboard/metisMenu.min.css" rel="stylesheet" />
     <link href="~/Content/dashboard/timeline.css" rel="stylesheet" />
     <link href="~/Content/dashboard/morris.css" rel="stylesheet" />
@@ -16,6 +15,8 @@
     <link href="~/Content/dashboard/dataTables.bootstrap.css" rel="stylesheet" />
     <link href="~/Content/Chat.css" rel="stylesheet" />
     <link href="~/Content/ng-grid.css" rel="stylesheet" />
+    <link href="~/Scripts/myCSS/abn_tree.css" rel="stylesheet" />
+    <link href="~/Scripts/myCSS/recordCSS.css" rel="stylesheet" />
     <link href="@Url.Content("~/Content/themes/base/all.css")" rel="stylesheet" type="text/css" />
 
 
@@ -71,7 +72,6 @@
 
     <script src="~/Scripts/scripts/angular-touch.js"></script>
 
-    <script src="~/Scripts/myScripts/angular.treeview.js"></script>
     <script src="~/Scripts/myScripts/abn_tree_directive.js"></script>
     <script src="~/Scripts/myScripts/App.js"></script>
     <script src="~/Scripts/myScripts/catalogService.js"></script>
