--- a/MvcApp/Views/Account/Task.cshtml
+++ b/MvcApp/Views/Account/Task.cshtml
@@ -24,7 +24,7 @@
             </a>
         </div>
 
-        <table class="table paginated">
+        <table class="table paginated table-bordered">
             <tr>
                 <th>
                     Название
@@ -64,7 +64,7 @@
                 <div class="col-md-3 col-lg-3 col-xs-3 col-sm-3 control-label">
                     Название
                 </div>
-                <input type="text" class="col-md-9 col-lg-9 col-xs-9 col-sm-9 form-control inline"/>
+                <input type="text" class="col-md-9 col-lg-9 col-xs-9 col-sm-9  form-control inline" />
             </div>
 
             <div class="form-group">
@@ -85,8 +85,66 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="form-group">
+                <div class="col-md-3 col-lg-3 col-xs-3 col-sm-3 control-label">
+                    Когда
+                </div>
+                <div class="dropdown btn-group col-md-9 col-lg-9 col-xs-9 col-sm-9 inline">
+                    <a class="btn btn-default dropdown-toggle" data-toggle="dropdown" href="#">
+                        <span ng-bind="time"> No Change </span>
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li ng-repeat="time in times">
+                            <a href="" ng-click="changeTime(time)">
+                                <span ng-bind="time"> </span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="form-group center-block">
+                <div class="checkbox col-md-3 col-lg-3 col-xs-6 col-sm-4">
+                    <label>
+                        <input type="checkbox" class='weekday'> Понедельник
+                    </label>
+                </div>
+                <div class="checkbox col-md-3 col-lg-3 col-xs-6 col-sm-4">
+                    <label>
+                        <input type="checkbox" class='weekday'> Вторник
+                    </label>
+                </div>
+                <div class="checkbox col-md-3 col-lg-3 col-xs-6 col-sm-4">
+                    <label>
+                        <input type="checkbox" class='weekday'> Среда
+                    </label>
+                </div>
+                <div class="checkbox col-md-3 col-lg-3 col-xs-6 col-sm-4">
+                    <label>
+                        <input type="checkbox" class='weekday'> Четверг
+                    </label>
+                </div>
+                <div class="checkbox col-md-3 col-lg-3 col-xs-6 col-sm-4">
+                    <label>
+                        <input type="checkbox" class='weekday'> Пятница
+                    </label>
+                </div>
+                <div class="checkbox col-md-3 col-lg-3 col-xs-6 col-sm-4">
+                    <label>
+                        <input type="checkbox" class='weekday'> Суббота
+                    </label>
+                </div>
+                <div class="checkbox col-md-3 col-lg-3 col-xs-4 col-sm-3">
+                    <label>
+                        <input type="checkbox" class='weekday'> Воскресенье
+                    </label>
+                </div>
+            </div>
         </div>
 
+        <button class="btn btn-success"> Добавить </button>
 
     </div>
 </div>
